set imge max-height to avoid cutting off

--- a/src/component/Slider.css
+++ b/src/component/Slider.css
@@ -1,7 +1,7 @@
 .slider{
     position: relative;
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
